creating index for bam files